--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ img {
 
 #selfie {
   width: auto;
+  margin-left: auto;
   max-width: 250px;
   max-height: 300px;
   border: 5px solid #606c38;
@@ -40,7 +41,7 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 0 auto;
+  margin-right: auto;
 }
 
 #career {
@@ -51,15 +52,18 @@ h2 {
   margin: 0px;
 }
 
-#career .section-body p {
-  font-weight: bold;
+.subtitle {
+  background: #bc6c25;
+  padding: 0 7px;
+  margin: 13px 0;
+  width: fit-content;
 }
 
 #interests {
   background: #bc6c25;
 }
 
-#interests .section-body {
+.section-body {
   display: flex;
   flex-direction: column;
 }
@@ -68,7 +72,7 @@ h2 {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  
+
   flex-wrap: wrap;
   margin: 10px 0;
   gap: 10px;
