--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
+/* colors reference: https://coolors.co/palette/606c38-283618-fefae0-dda15e-bc6c25 */
+
 body {
   display: flex;
   align-items: center;
   flex-direction: column;
-  background: #606c38;
+  background: linear-gradient(#606c38, #ccd5ae);
   gap: 10px;
   padding: 10px 0;
   margin: 0;
+  font-family: 'Sometype Mono';
 }
 
 .header, .section {
@@ -47,7 +50,9 @@ img:hover {
   flex-direction: column;
   justify-content: space-between;
   margin-right: auto;
+  padding: 30px 0 45px 0;
 }
+
 
 #github {
   width: 30px;
@@ -116,13 +121,9 @@ h2 {
 }
 
 .img-description {
-  font-size: 16px;
-  margin: 0;
   font-weight: light;
 }
 
 .bold-img-description {
-  font-size: 13px;
-  font-weight: bold;
-  margin: 0;
+  font-weight: 700;
 }
